--- a/src/input.css
+++ b/src/input.css
@@ -191,7 +191,7 @@
   
   .content-style{
     text-transform: uppercase;
-    color: #0a5116;
+    color: #7D0A0F;
     font-size: 25px;
     font-weight: 700;
   }
